repaired pom.xml after merge, corrected read_me.txt